--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -10,3 +10,6 @@ on:
 jobs:
   gradle-publish:
     uses: interlok-tooling/reusable-workflows/.github/workflows/gradle-publish.yml@main
+    secrets:
+      NEXUS_REPO_PASSWORD: ${{ secrets.NEXUS_REPO_PASSWORD }}
+      TEAMS_IDN_WH_URL: ${{ secrets.TEAMS_IDN_WH_URL }}
