--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   gradle-publish:
+    name: Gradle Publish
     uses: interlok-tooling/reusable-workflows/.github/workflows/gradle-publish.yml@main
     secrets:
       NEXUS_REPO_PASSWORD: ${{ secrets.NEXUS_REPO_PASSWORD }}
