--- a/.github/workflows/approve-merge-dependabot-pr.yml
+++ b/.github/workflows/approve-merge-dependabot-pr.yml
@@ -7,3 +7,5 @@ jobs:
   gradle-check:
     name: Approve And Merge Dependabot PR
     uses: interlok-tooling/reusable-workflows/.github/workflows/approve-merge-dependabot-pr.yml@main
+    secrets:
+      DEPENDABOT_APPROVE_MERGE_GITHUB_TOKEN: ${{ secrets.DEPENDABOT_APPROVE_MERGE_GITHUB_TOKEN }}
