Use v1 of the reuseable action for dependabot v4 as they use java 11

--- a/.github/workflows/gradle-check.yml
+++ b/.github/workflows/gradle-check.yml
@@ -9,4 +9,4 @@ on:
 jobs:
   gradle-check:
     name: Gradle Check
-    uses: interlok-tooling/reusable-workflows/.github/workflows/gradle-check.yml@main
+    uses: interlok-tooling/reusable-workflows/.github/workflows/gradle-check.yml@v1.0.0
