INTERLOK-4098 Uprade to Junit 5
Upgrade gradle wrapper to 7.6.1

--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ ext {
   activeMqVersion = "5.17.2"
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 group   = "com.adaptris"
 version = releaseVersion
 def versionDir = "$buildDir/version"
@@ -127,7 +127,7 @@ dependencies {
 
   annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
 
-  testImplementation ('junit:junit:4.13.2')
+  testImplementation ("org.junit.jupiter:junit-jupiter-engine:5.9.3")
   testImplementation ("org.slf4j:slf4j-simple:$slf4jVersion")
   testImplementation ("com.adaptris:interlok-stubs:$interlokCoreVersion") { changing= true }
   testImplementation ("org.mockito:mockito-core:$mockitoVersion")
@@ -139,7 +139,6 @@ dependencies {
   javadoc("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
   offlineJavadocPackages ("com.adaptris:interlok-core:$interlokCoreVersion:javadoc@jar") { changing= true}
   offlineJavadocPackages ("com.adaptris:interlok-common:$interlokCoreVersion:javadoc@jar") { changing= true}
-
 }
 
 jar {
@@ -165,10 +164,10 @@ javadoc {
 }
 
 jacocoTestReport {
-    reports {
-        xml.required= true
-        html.required= true
-    }
+  reports {
+    xml.required= true
+    html.required= true
+  }
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
@@ -182,8 +181,8 @@ task examplesJar(type: Jar, dependsOn: test) {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
+  classifier = 'sources'
+  from sourceSets.main.allSource
 }
 
 artifacts {
@@ -229,7 +228,6 @@ task offlinePackageList(type: Copy) {
   into offlineJavadocPackageDir
 }
 
-
 publishing {
   publications {
     mavenCustom(MavenPublication) {
@@ -263,7 +261,6 @@ publishing {
     }
   }
 }
-
 
 delombok {
   target = delombokTargetDir
@@ -308,8 +305,13 @@ dependencyCheck  {
   }
 }
 
+test {
+  useJUnitPlatform()
+}
+
 // disable spotbugsTests which checks our test code..
 spotbugsTest.enabled = false
+
 clean.dependsOn deleteGeneratedFiles
 check.dependsOn jacocoTestReport
 javadoc.dependsOn offlinePackageList
